# Torii

./: .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  ROADMAP.md  package-lock.json  package.json
.github/scripts/: fix-windows-versioning.ts  print-tauri-version.ts
.github/workflows/: publish.yml
torii-api/: go.mod
torii-api/src/: main.go
torii-client/: .eslintrc.js  .prettierrc  README.md  index.html  package.json  tsconfig.json  vite.config.ts
torii-client/src/: App.vue  main.ts  shims-vue.d.ts
torii-client/src/components/: HelloWorld.vue  LanguageSelect.vue
torii-client/src/components/article/: MarkdownEditor.vue  MarkdownEditorAutocomplete.vue  autocomplete-extension.ts
torii-client/src/components/file/: FileTree.vue  (+1 more)
torii-client/src/composables/: listRecentProjects.ts  recentProjects.ts  settings-window.ts  watch-locale.ts
torii-client/src/locales/: en.json  jp.json  zh.json
torii-client/src/router/: index.ts
torii-client/src/stores/: settings.ts
torii-client/src/styles/: global.scss
torii-client/src/views/: AboutView.vue  HomeView.vue  LauncherView.vue  ProjectView.vue  RecentProjectsView.vue  SettingsView.vue
torii-desktop/: Cargo.toml  build.rs  tauri.conf.json
torii-desktop/capabilities/: default.json
torii-desktop/src/: lib.rs  main.rs  recent.rs
torii-desktop/src/components/: article.rs  image.rs  mod.rs
torii-desktop/src/project/: mod.rs  record.rs
torii-desktop/src/recent/: mod.rs
torii-example/: Changelog.md  Components.md  Flower.md  Kobe City.md  README.md  Roadmap.md  Vision.md
(+8 files in other folders)
