[package]
name = "torii-desktop"
# version = "0.0.0"
edition = "2024"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2.7"
tauri-plugin-cors-fetch = "5.0.0"
base64 = "0.22.1"
