[package]
name = "torii-desktop"
# version = "0.0.0"
edition = "2024"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.1", features = [] }

[dependencies]
base64 = "0.22.1"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.11", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2.7"
tauri-plugin-cors-fetch = "5.0.0"
tauri-plugin-store = "2.4.3"
